--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
         <nav id="navbar">
             <div id="name">WA</div>
             <ul id="nav-links">
-                <li><a href="#section1">1</a></li>
-                <li><a href="#section2">2</a></li>
-                <li><a href="#section3">3</a></li>
-                <li><a href="#section4">4</a></li>
-                <li><a href="#section5">5</a></li>
-                <li><a href="#section6">6</a></li>
+                <li><a href="#section1">Home</a></li>
+                <li><a href="#section4">Summary</a></li>
+                <li><a href="#section5">Problem</a></li>
+                <li><a href="#section6">Solutions</a></li>
             </ul>
-            <div id="job-title">UX Designer</div>
+            <div id="job-title">UX</div>
         </nav>
     </header>
 
@@ -61,7 +59,7 @@
         <div class="content-container">
             <div class="text-content">
                 <div class="image-header">
-                <img src="img/iconamoon_profile.png" alt="Right App Mockup" />
+                <img src="img/iconamoon_profile.png" alt="icon/image"/>
                 </div>
         <h2>Role</h2>
         <p><strong id="bigger">As a key member of the Siren team, my role encompassed
@@ -123,8 +121,10 @@
         <div class="content-container">
             <div class="text-content">
         <h2>Solution</h2>
-
-        <p><strong id='bigger'>Sprint 1 (Red Flags Feature):</br></strong>
+        <div class="image-header">
+        <img src="img/iPhone 15 Pro Portrait Mockup 5.png" alt="icon/image"/>
+        </div>
+        <p><strong id='bigger'>Sprint 1 (Red Flags Feature):</br>Week 1 of the Sprint </br></strong>
             Our first sprint was dedicated to the 'Red Flags' feature. 
             We created scenarios using fake profiles with varying 
             levels of warnings – from multiple red flags to none. 
@@ -135,6 +135,8 @@
             feedback validated our assumption that clear warning 
             signals could significantly impact user decision-making.</p>
         </div>
+        
+
         <div class="image-content">
             <!-- Interactive images for Section 1 -->
         </div>
@@ -144,6 +146,12 @@
     <section id="section7">
         <div class="content-container">
             <div class="text-content">
+                <div class="image-header">
+                    <img src="img/iPhone 15 Pro Portrait Mockup 6.png" alt="icon/image"/>
+                    <div class="icons">
+                    <img src="img/Closed Flags Yellow.png" alt="icon/image"/>
+                </div>
+                    </div>
         <p><strong id='bigger'>Sprint 1 (Going Forward):</br></strong>
             In response to user feedback, we refined the 'Red Flags' feature. 
             We introduced a pull-out menu for report details, ensuring the 
@@ -160,7 +168,9 @@
     <section id="section8">
         <div class="content-container">
             <div class="text-content">
-
+                <div class="image-header">
+                    <img src="img/iPhone 15 Pro Portrait Mockup 7.png" alt="icon/image"/>
+                    </div>
         <p><strong id='bigger'>Sprint 2 (Mandatory Video Calls):</br></strong>
             The second sprint focused on the mandatory video call feature. 
             The premise was simple but powerful: require a video call 
@@ -179,6 +189,9 @@
     <section id="section9">
         <div class="content-container">
             <div class="text-content">
+                <div class="image-header">
+                    <img src="img/iPhone 15 Pro Portrait Mockup 8.png" alt="icon/image"/>
+                    </div>
         <p><strong id='bigger'>Sprint 2 (Scheduling):</br></strong>
             The insights gained were significant. Users were able 
             to detect inconsistencies or deceptive behavior, 
@@ -204,8 +217,8 @@
         <p>The journey of developing Siren was a profound learning experience 
             in user-centered design and innovation. 
             If I were to revisit this project, 
-            I would delve deeper into user testing and 
-            xplore an even wider range of safety features. 
+            I would like to go deeper into user testing and 
+            explore an even wider range of safety features. 
             This experience highlighted the importance of continuous 
             learning, adaptation, and empathy towards user needs, 
             ultimately contributing to my growth as a professional 
