--- a/index.html
+++ b/index.html
@@ -204,7 +204,19 @@
             more conveniently. This adjustment not only enhanced the 
             functionality of the feature but also respected user 
             preferences for a more informal scheduling process.</p>
+
+        </br></br></br></br>
+        <strong id='bigger'>
+             <div id= prototype data-text="-">
+                <a href="https://www.figma.com/proto/d9UrDcwn38xQCkrkAiKy7x/Dating-App?type=design&node-id=343-970&t=y0CIVxSo7uCiW5MT-1&scaling=scale-down&page-id=116%3A4&starting-point-node-id=343%3A970&show-proto-sidebar=1&mode=design" class="prototype-link">
+                Demo 
+                </a>
+            </div></br>
+
     </div>
+
+
+
     <div class="image-content">
         <!-- Interactive images for Section 1 -->
     </div>
