--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <p><strong id='bigger'>Sprint 1 (Red Flags Feature):</br>Week 1 of the Sprint </br></strong>
             Our first sprint was dedicated to the 'Red Flags' feature. 
             We created scenarios using fake profiles with varying 
-            levels of warnings – from multiple red flags to none. 
+            levels of warnings; from multiple red flags to none. 
             The goal was to observe if and how these warnings 
             influenced user interactions. The results were enlightening. 
             Users generally avoided profiles with red flags and showed 
